cicd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-angular7
  labels:
    app.kubernetes.io/part-of: sample-angular7
