cicd/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-angular7
  labels:
    app: sample-angular7
    app.kubernetes.io/part-of: sample-angular7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-angular7
  template:
    metadata:
      labels:
        app: sample-angular7
    spec:
      containers:
        - name: sample-angular7
          image: image-registry.openshift-image-registry.svc:5000/sample-angular7/sample-angular7:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
