cicd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-angular7
  labels:
    app: sample-angular7
    app.kubernetes.io/part-of: sample-angular7
spec:
  selector:
    app: angular7-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
